# ModemBridge-2k26

./: .gitignore  CMakeLists.txt  README.md  phonebook.xml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
release/: ModemBridge-Installer.iss  deploy_linux.sh  deploy_mac.sh  deploy_pi.sh  deploy_win.ps1
release/modembridge_1.0.0_arm64/DEBIAN/: control
res/: resources.qrc  splash.png.old  webui.qrc
res/docx/: UserGuide.docx
res/icons/: app_icon.icns  app_icon.png.old
res/webui/: index.html
src/: AboutDialog.cpp  AppSettings.cpp  AppSettings.h  LogWindow.cpp  LogWindow.h  SettingsDialog.cpp  SettingsDialog.h  TrayManager.cpp  TrayManager.h  bbsdata.h  main.cpp  modembridge.cpp  modembridge.h  phonedirectory.cpp  phonedirectory.h  sshclient.cpp  sshclient.h  webbridge.cpp  webbridge.h  websocketclientwrapper.cpp  websocketclientwrapper.h
